# nobsp_lib

./: .gitignore  README.md  pyproject.toml
examples/: tabular_regression_curves.py  vision_shapes_heatmaps.py
src/nobsp/: __init__.py  decomposition.py  vision.py
src/nobsp/core/: __init__.py  beta_batched.py  decompose.py  decompose_cnn.py  decompose_gpu.py  nobsp_cam.py  nobsp_cam_cnn.py  oblique.py
src/nobsp/models/: __init__.py  classifiers.py  regressors.py
src/nobsp/utils/: __init__.py  device.py  similarity_utils.py  tensor_ops.py  validation.py
src/nobsp_lib/: __init__.py  adapters.py  models.py  plotting.py  tabular.py  vision.py
tests/: test_runtime_regressions.py
